更新package信息描述实用模版渲染名称等信息

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "hello-vue3",
+  "name": "{{name}}",
   "private": true,
+  "description": "{{description}}",
+  "auther": "{{author}}",
   "version": "0.0.0",
   "scripts": {
     "serve": "vite",
