feat：项目基础配置

--- a/.env.development
+++ b/.env.development
@@ -2,10 +2,13 @@
 NODE_ENV = development
 
 #socket api
- VUE_APP_SOCKET_API='//socketio.danbay.cn/steward'
+ VUE_APP_SOCKET_BASE_API='//socketio.danbay.cn/steward'
 
 
 #upload base api
-VUE_APP_UPLOAD_BASE_API = '//res.danbay.cn'
+VUE_APP_FILE_BASE_API = '//res.danbay.cn'
+
+#api
+VITE_APP_BASE_API='/dev-api'
 
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
