--- a/.env.production
+++ b/.env.production
@@ -2,11 +2,14 @@
 NODE_ENV = production
 
 #upload base api   file upload url
-VUE_APP_UPLOAD_BASE_API = '//res.danbay.cn'
+VITE_APP_FILE_BASE_API = '//res.danbay.cn'
 
 
 #socket api
-VUE_APP_SOCKET_API='//socketio.danbay.cn/steward'
+VITE_APP_SOCKET_BASE_API='//socketio.danbay.cn/steward'
+
+#api
+VITE_APP_BASE_API='/prod-api'
 
 
 
