--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "{{name}}",
+  "name": "test",
   "private": true,
-  "description": "{{description}}",
-  "auther": "{{author}}",
+  "description": "test",
+  "auther": "test",
   "version": "0.0.0",
   "scripts": {
     "serve": "vite",
@@ -10,19 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "axios": "^0.27.2",
+    "element-plus": "^2.2.9",
+    "lodash-es": "^4.17.21",
+    "pinia": "^2.0.16",
+    "vue-i18n": "9",
+    "vue-router": "^4.0.16",
+    "sass": "^1.52.3"
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^1.8.2",
     "@vitejs/plugin-vue": "^2.3.3",
-    "axios": "^0.27.2",
-    "element-ui": "^2.15.9",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.2.0",
     "sass": "^1.52.3",
-    "terser": "^5.14.1",
     "vite": "^2.9.9",
-    "vue-router": "^4.0.16",
-    "vuex": "^4.0.2",
     "socket.io-client": "^2.3.1",
-    "normalize.css": "7.0.0"
+    "normalize.css": "7.0.0",
+    "unplugin-auto-import": "^0.9.2",
+    "unplugin-vue-components": "^0.21.1",
+    "vite-plugin-svg-icons": "^2.0.1"
   }
 }
