--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "test",
+  "name": "{{name}}",
   "private": true,
-  "description": "test",
-  "auther": "test",
-  "version": "0.0.0",
+  "description": "{{description}}",
+  "auther": "{{author}}",
+  "version": "1.0.0",
   "scripts": {
-    "serve": "vite",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -33,6 +33,8 @@
     "normalize.css": "7.0.0",
     "unplugin-auto-import": "^0.9.2",
     "unplugin-vue-components": "^0.21.1",
-    "vite-plugin-svg-icons": "^2.0.1"
+    "vite-plugin-svg-icons": "^2.0.1",
+    "path-browserify": "^1.0.1",
+    "path-to-regexp": "^6.2.0"
   }
 }
