--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.danbay.cloud.base</groupId>
-    <artifactId>tclyun-vod-web</artifactId>
+    <artifactId>{{name}}</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
