--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,9 @@
 {
-  "recommendations": ["Vue.volar"]
+  "recommendations": [
+    "dbaeumer.vscode-eslint",
+    "Vue.volar",
+    "esbenp.prettier-vscode",
+    "EditorConfig.EditorConfig",
+    "lokalise.i18n-ally"
+  ]
 }
